fix README add test for layout files fix extension teaser

--- a/app/design/adminhtml/default/default/template/ffuenf/common/teaser.phtml
+++ b/app/design/adminhtml/default/default/template/ffuenf/common/teaser.phtml
@@ -1,5 +1,5 @@
 <div class="ffuenf-teaser">
-    <a class="logo" href="http://www.ffuenf.de" title="ffuenf | code / design / e-commerce">ffuenf | code / design / e-commerce</a>
+    <a class="logo" href="http://www.ffuenf.de" title="ffuenf - code • design • e-commerce">ffuenf | code / design / e-commerce</a>
     <h4>
         <?php echo Mage::helper('ffuenf_common')->__('<a class="link" target="_blank" href="%s">%s v%s</a>', $this->getExtensionRepositoryUrl(), $this->getExtensionName(), $this->getExtensionVersion()) ?>
     </h4>
