--- a/app/design/adminhtml/default/default/layout/ffuenf_common.xml
+++ b/app/design/adminhtml/default/default/layout/ffuenf_common.xml
@@ -18,7 +18,7 @@
 */
 -->
 <layout version="0.1.0">
-    <adminhtml_system_config_edit>
+    <default>
         <reference name="head">
             <action method="addCss">
                 <stylesheet>ffuenf/common.css</stylesheet>
@@ -28,5 +28,39 @@
                 <name>ffuenf/common.js</name>
             </action>
         </reference>
-    </adminhtml_system_config_edit>
+        <reference name="before_body_end">
+            <block type="core/template" template="ffuenf/common/init.phtml" />
+        </reference>
+    </default>
+    <ffuenf_common_adminhtml_sysinfo_index>
+        <reference name="content">
+            <block type="ffuenf_common/adminhtml_sysinfo" name="ffuenf_common_sysinfo_data" />
+        </reference>
+    </ffuenf_common_adminhtml_sysinfo_index>
+    <ffuenf_common_adminhtml_log_api_index>
+        <reference name="content">
+            <block type="ffuenf_common/adminhtml_log_system" name="ffuenf_common_log_system"/>
+        </reference>
+    </ffuenf_common_adminhtml_log_api_index>
+    <ffuenf_common_adminhtml_log_exception_index>
+        <reference name="content">
+            <block type="ffuenf_common/adminhtml_log_exception" name="ffuenf_common_log_exception"/>
+        </reference>
+    </ffuenf_common_adminhtml_log_exception_index>
+    <ffuenf_common_adminhtml_log_api_view>
+        <reference name="head">
+            <action method="addCss"><stylesheet>ffuenf/common-highlight.css</stylesheet></action>
+        </reference>
+        <reference name="before_body_end">
+            <block type="core/template" name="ffuenf_log.js" template="ffuenf/common/log/js.phtml"/>
+        </reference>
+    </ffuenf_common_adminhtml_log_api_view>
+    <ffuenf_common_adminhtml_log_exception_view>
+        <reference name="head">
+            <action method="addCss"><stylesheet>ffuenf/common-highlight.css</stylesheet></action>
+        </reference>
+        <reference name="before_body_end">
+            <block type="core/template" name="ffuenf_log.js" template="ffuenf/common/log/js.phtml"/>
+        </reference>
+    </ffuenf_common_adminhtml_log_exception_view>
 </layout>
