--- a/skin/adminhtml/default/default/ffuenf/common.css
+++ b/skin/adminhtml/default/default/ffuenf/common.css
@@ -24,7 +24,7 @@ img.ext-status {
 }
 .head-ffuenf-sysinfo,
 .head-ffuenf-log {
-    background-image: url('../images/icon.png');
+    background-image: url('icon.png');
 }
 
 
